# rogue

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
include/: findpath.h  map.h  monster.h  player.h  scoreboard.h  util.h  vector.h  view.h
src/: findpath.c  main.c  map.c  monster.c  player.c  scoreboard.c  util.c  vector.c  view.c
